<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic 3D object example</string>
    <string name="app_version">Version: %1$s</string>
    <string name="made_by">Made by nwanvu</string>
    <string name="contact_me">Contact me at</string>
    <string name="email_address">nwanvu93@gmail.com</string>

    <string name="action_github">View on GitHub</string>
    <string name="action_more_app">More apps from us</string>
    <string name="action_settings">About</string>

    <string name="url_source">https://github.com/nwanvu93/Basic-3D-object-example</string>
    <string name="url_more_app">https://sites.google.com/site/nwanvu/source/moreapps</string>

    <string name="text_source">SOURCE</string>
    <string name="text_empty_view">NO DATA</string>
    <string name="text_open_source_licenses">Open source licenses</string>

    <string name="text_speed">Speed</string>
    <string name="text_rotate_x">rotateX</string>
    <string name="text_rotate_y">rotateY</string>
    <string name="text_rotate_z">rotateZ</string>
    <string name="text_donate_advertisement">Donate advertisement</string>

</resources>
