<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_gift"
        android:icon="@mipmap/ic_card_giftcard_white_24dp"
        android:title="@string/text_donate_advertisement"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_github"
        android:icon="@mipmap/ic_action_github"
        android:orderInCategory="100"
        android:title="@string/action_github"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
